Updates to get the project to compile on CentOS 6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ IF(UNIX)
 
 		SET(EXTRA_LIBRARIES ${COCOA_LIBRARY})
   ELSE()
-    SET(EXTRA_LIBRARIES "GL" "GLU" "X11" "Xrandr")
+    SET(EXTRA_LIBRARIES "GL" "GLU" "X11" "Xrandr" "pthread" "rt")
     ADD_DEFINITIONS("-DPLATFORM_LINUX")
   ENDIF()
 ENDIF(UNIX)
