Started to implement render targets

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(SOURCE
   base/Vector3.cpp
   base/Matrix4.cpp
   base/Quaternion.cpp
+  base/Buffer.cpp
 
   material/DefaultMaterials.cpp
   material/DefaultGLShaders.cpp
