Added a stream data type

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(SOURCE
   foundation/string_stream.cpp
   foundation/scheduler.cpp
   foundation/freelist.cpp
+  foundation/stream.cpp
 
   loader/ImageUtils.cpp
   loader/CTMLoader.cpp
