Fixing bugs related to RenderTarget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 # Always build with debug symbols for now.
 #LIST(APPEND CMAKE_C_FLAGS -g)
 
-IF(BUILD_DEBUG)
+IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   ADD_DEFINITIONS("-DDEBUG")
 ENDIF()
 
