Started to implement an immediate gui

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ SET(SOURCE
   opengl/GLMaterial.cpp
   opengl/GLTexture.cpp
   opengl/GLRenderTarget.cpp
+  opengl/GLImmediateGui.cpp
 )
 
 SET(LIBRARIES
