Started to implement a true-type font loader, and a font definition.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(SOURCE
   base/Matrix4.cpp
   base/Quaternion.cpp
   base/RenderTarget.cpp
+  base/Font.cpp
 
   material/DefaultMaterials.cpp
   material/DefaultGLShaders.cpp
@@ -29,6 +30,7 @@ SET(SOURCE
   loader/ImageUtils.cpp
   loader/CTMLoader.cpp
   loader/JSONLoader.cpp
+  loader/FontLoader.cpp
 
   opengl/GLObject.cpp
   opengl/GLGeometry.cpp
