Implemented true-type font loading

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(SOURCE
   base/Quaternion.cpp
   base/RenderTarget.cpp
   base/Font.cpp
+  base/File.cpp
 
   material/DefaultMaterials.cpp
   material/DefaultGLShaders.cpp
