Created a new example that displayes some text

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,8 @@ SET(SOURCE
   base/Font.cpp
   base/File.cpp
 
+  util/GeometryHelper.cpp
+
   material/DefaultMaterials.cpp
   material/DefaultGLShaders.cpp
 
