Started to implement a simple culling demo

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ SET(SOURCE
   loader/FontLoader.cpp
 
   extras/LSystem.cpp
+  extras/PoissonSet.cpp
 
   opengl/GLObject.cpp
   opengl/GLGeometry.cpp
