--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,9 +13,11 @@ ADD_EXECUTABLE(triangle Triangle.cpp)
 ADD_EXECUTABLE(camaro Camaro.cpp)
 ADD_EXECUTABLE(text Text.cpp)
 ADD_EXECUTABLE(render_to_texture RenderToTexture.cpp)
+ADD_EXECUTABLE(culling Culling.cpp)
 
 TARGET_LINK_LIBRARIES(cube ${LIBRARIES})
 TARGET_LINK_LIBRARIES(triangle ${LIBRARIES})
 TARGET_LINK_LIBRARIES(camaro ${LIBRARIES})
 TARGET_LINK_LIBRARIES(text ${LIBRARIES})
 TARGET_LINK_LIBRARIES(render_to_texture ${LIBRARIES})
+TARGET_LINK_LIBRARIES(culling ${LIBRARIES})
